The master branch is main now, hm, #2

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,9 +1,9 @@
-name: CI-master
+name: CI-main
 
 on:
   push:
     branches:
-      - master
+      - main
   schedule:
     - cron: '50 1 * * *'
   workflow_dispatch:
