--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on: workflow_dispatch
 
 jobs:
-  build_and_check:
+  publish:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
