--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "fdec"
 version = "0.1.0"
 authors = ["Andrew Lygin <alygin@gmail.com>"]
 description = "A collection of macros for generating fixed-size fixed-point numeric types for Rust."
-keywords = ["numbers", "numerics", "fixed-point", "decimal", "mathematics", "arithmetic"]
+keywords = ["numbers", "numeric", "fixed-point", "decimal", "arithmetic"]
 categories = ["data-structures", "algorithms", "mathematics"]
 license = "MIT"
 repository = "https://github.com/alygin/fdec"
