--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,18 @@ debug = 0
 
 [dependencies]
 lazy_static = "1.4"
+
+[dev-dependencies]
+criterion = "0.3.5"
+
+[[bench]]
+name = "arithmetics"
+harness = false
+
+[[bench]]
+name = "conversion"
+harness = false
+
+[[bench]]
+name = "functions"
+harness = false
